--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <p id="demo"> </p>
     <script src="script.js"></script>
     <p> scripter added </p>
+    <p> few more linnes are added </p>
 </body>
 </html>
