--- a/index.html
+++ b/index.html
@@ -11,5 +11,8 @@
     <script src="script.js"></script>
     <p> scripter added </p>
     <p> few more linnes are added </p>
+    <p> few more linnes are added </p>
+    <p> few more linnes are added </p>
+    <p> few more linnes are added </p>
 </body>
 </html>
