--- a/index.html
+++ b/index.html
@@ -14,5 +14,6 @@
     <p> few more linnes are added </p>
     <p> few more linnes are added </p>
     <p> few more linnes are added </p>
+    <p> logging into github from local </p>
 </body>
 </html>
